--- a/style/style.css
+++ b/style/style.css
@@ -3,13 +3,16 @@ body {
 	font-family: 'Overpass', sans-serif;
 }
 
+a {
+	text-decoration: none;
+}
+
 header {
 	width: 100%;
 	height: 1080px;
 	background-image: url(../img/header.jpg);
 	background-repeat: no-repeat;
 	background-size: 100% 1080px;
-
 }
 
 .menu_up {
@@ -41,7 +44,7 @@ header {
 	margin: auto;
 	position: relative;
 	height: 158px;
-	width: 17%;
+	width: 13%;
 }
 
 .menu_up_link {
@@ -70,9 +73,42 @@ header {
 
 .menu_up_icons_els {
 	width: 20%;
-	height: 150px;
 	margin: auto;
 	display: flex;
+}
+
+.face_icon {
+	display: block;
+	background-image: url(../img/facebook.png);
+	width: 75px;
+	height: 75px;
+	background-size: 75px 75px;
+}
+.snap_icon {
+	display: block;
+	background-image: url(../img/snapchat.png);
+	width: 75px;
+	height: 75px;
+	background-size: 75px 75px;
+}
+.whatsapp_icon {
+	display: block;
+	background-image: url(../img/whatsapp.png);
+	width: 75px;
+	height: 75px;
+	background-size: 75px 75px;
+}
+.youtube_icon {
+	display: block;
+	background-image: url(../img/youtube.png);
+	width: 75px;
+	height: 75px;
+	background-size: 75px 75px;
+}
+
+.menu_up_icon_link:hover {
+	transform: rotate(360deg);
+	transition: 0.5s;
 }
 
 
