--- a/style/style.css
+++ b/style/style.css
@@ -140,6 +140,7 @@ header {
 	height: 112px;
 	border-radius: 50%;
 	border: 2px solid #EEEEEE;
+	transition: 0.5s;
 }
 
 i {
@@ -161,7 +162,11 @@ i {
 }
 
 .btn_scroll_down_up:hover .btn_arrow_scroll_down_up {
-	transform: rotate(405deg);
+	border-color: #4070FF;
+}
+
+.btn_scroll_down_up:hover {
+	border-color: #4070FF;
 }
 
 
@@ -214,6 +219,11 @@ main {
 	background-position: 37px 27px;
 	margin: auto;
 	filter: invert(1);
+	transition: 0.3s;
+}
+
+.icon_feature_w_block:hover {
+	filter: invert(0.9);
 }
 
 .icon_feature_one {
@@ -252,3 +262,92 @@ main {
 	font-size: 22px;
 	margin-top: 25px;
 }
+
+
+.blogs {
+	display: flex;
+	flex-direction: column;
+	width: 100%;
+	height: 1080px;
+}
+
+.blog {
+	display: flex;
+	width: 100%;
+	height: 540px;
+	background-color: red;
+}
+
+.img_part_blog {
+	width: 50%;
+	height: 540px;
+	background-size: 960px;
+	height: 540px
+}
+
+.text_part_blog {
+	width: 50%;
+	height: 540px;
+	background-size: 960px;
+	height: 540px
+}
+
+.img_first_blog {
+	background-size: 960px 600px;
+	background-position: 0px -50px;
+	background-image: url(../img/first_blog.jpg);
+	background-repeat: no-repeat;
+}
+
+.img_second_blog {
+	background-size: 960px 540px;
+	background-image: url(../img/second_blog.jpg);
+}
+
+.first_blog {
+	background-color: #222222;
+}
+
+.second_blog {
+	background-color: #F3F3F3;
+}
+
+.first_date_blog {
+	margin-left: 200px;
+	margin-top: 50px;
+	color: #F2F2F2;
+}
+.second_date_blog {
+	margin-left: 100px;
+	margin-top: 50px;
+	color: #222222;
+}
+
+.h3_first_blog {
+	font-size: 35px;
+	margin-left: 200px;
+	color: #F2F2F2;
+}
+.h3_second_blog {
+	font-size: 35px;
+	margin-left: 100px;
+	color: #222222;
+}
+
+.first_blog_text {
+	display: block;
+	width: 600px;
+	margin-left: 200px;
+	font-size: 25px;
+	color: #F2F2F2;
+}
+
+.second_blog_text {
+	display: block;
+	width: 600px;
+	margin-left: 100px;
+	font-size: 25px;
+	color: #222222;
+}
+
+
