--- a/style/style.css
+++ b/style/style.css
@@ -649,3 +649,90 @@ main {
 	position: relative;
 	color: #222222;
 }
+
+.h2_your_project {
+	text-align: center;
+	font-size: 30px;
+	color: #FFFFFF;
+	position: relative;
+	top: 300px;
+	font-size: 50px;
+}
+
+.your_project {
+	width: 100%;
+	height: 1080px;
+	background-color: black;
+	position: relative;
+	background-repeat: no-repeat;
+	background-image: url(../img/input.jpg);
+	background-size: 1920px 1080px;
+}
+
+.your_project_submit {
+	display: block;
+	width: 350px;
+	height: 100px;
+	background-color: #11749E;
+	margin: auto;
+	position: relative;
+	top: 770px;
+}
+
+.your_project_form {
+	display: flex;
+	flex-direction: column;
+	margin: auto;
+	height: 25px;
+	position: relative;
+	top: 500px;
+}
+
+.h3_your_project {
+	color: #FFFFFF;
+	position: relative;
+	top: 27px;
+	font-size: 35px;
+	text-align: center;
+}
+
+.input_up {
+	width: 1500px;
+	display: flex;
+	margin: auto;
+}
+
+.input_up_input {
+	display: block;
+	width: 400px;
+	margin: auto;
+	font-size: 25px;
+	height: 30px;
+	vertical-align: middle;
+	background: transparent;
+	color: #FFFFFF;
+	resize: none;
+}
+
+textarea::placeholder {
+  color: white;  
+}
+
+.input_down {
+	display: block;
+	width: 1400px;
+	margin: auto;
+}
+
+.input_down_input {
+	width: 1400px;
+	margin: auto;
+	margin-top: 50px;
+	height: 200px;
+	font-size: 30px;
+	background: transparent;
+	color: #FFFFFF;
+	resize: none;
+}
+
+
