--- a/style/style.css
+++ b/style/style.css
@@ -352,7 +352,7 @@ main {
 .lets_blog_main {
 	background-color: white;
 	width: 100%;
-	height: 1380px;
+	height: 1500px;
 }
 
 .h2_lets_blog {
@@ -519,6 +519,11 @@ main {
 	height: 60px;
 	background-color: #11749E;
 	margin-left: 0px;
+	transition: 0.7s;
+}
+
+.left_iphone_block_block:hover {
+	filter: invert(0.1);
 }
 
 .left_iphone_block_first {
@@ -676,6 +681,15 @@ main {
 	margin: auto;
 	position: relative;
 	top: 770px;
+	transition: 0.5s;
+}
+
+.your_project_submit:hover {
+	background-color: #FFFFFF;
+}
+
+.your_project_submit:hover .h3_your_project{
+	color: #11749E;
 }
 
 .your_project_form {
@@ -693,6 +707,7 @@ main {
 	top: 27px;
 	font-size: 35px;
 	text-align: center;
+	transition: 0.7s;
 }
 
 .input_up {
@@ -764,4 +779,253 @@ footer {
 
 .madeby:hover {
 	color: #222222;
+}
+
+@media (max-width: 1368px) {
+	header {
+		width: 100%;
+		height: 700px;
+		background-image: url(../img/header.jpg);
+		background-repeat: no-repeat;
+		background-size: 100% 1080px;
+		margin: 0;
+	}
+	.h1_up {
+		font-size: 100px;
+		margin-top: 100px;
+	}
+
+	.menu_up_photo {
+		width: 100px;
+		height: 70px;
+		background-size: 100px 70px;
+		margin-top: 40px;
+	}
+
+	.menu_up_els {
+		width: 65%;
+	}
+
+	.menu_up_icons_els {	
+		margin-left: 0px;
+	}
+
+	.scroll_down_up {
+		position: relative;
+		top: -40px;
+	}
+
+
+
+	.w_block {
+		height: 700px;
+	}
+
+	.feature_w_blocks {
+		width: 95%;
+	}
+
+	.h2_wb_block {
+		top: 70px;
+	}
+
+	.feature_w_blocks {
+		margin-top: 150px;
+	}
+
+
+
+	.blogs {
+		height: 700px;
+	}
+
+	.blog {
+		height: 350px;
+	}
+
+	.blog_text {
+		font-size: 20px;
+	}
+
+	.h4_blog_blog {
+		font-size: 15px;
+		margin-top: 20px;
+	}
+
+	.h3_blog_blog {
+		font-size: 25px;
+	}
+
+	.img_part_blog {
+		height: 350px;
+	}
+
+	.first_blog_text {
+		margin-left: 50px;
+	}
+
+	.second_blog_text {
+		margin-left: 50px;
+	}
+
+	.first_date_blog {
+		margin-left: 50px;
+	}
+
+	.second_date_blog {
+		margin-left: 50px;
+	}
+
+	.h3_first_blog {
+		margin-left: 50px;
+	}
+
+	.h3_second_blog {
+		margin-left: 50px;
+	}
+
+
+
+
+
+	.lets_blog_main {
+		height: 700px;
+	}
+
+	.h2_lets_blog {
+		top: 30px;
+		font-size: 50px;
+	}
+
+	.h4_blog {
+		top: 40px;
+		font-size: 30px;
+	}
+
+	.lets_blogs {
+		width: 1200px;
+		height: 350px;
+		margin-top: 20px;
+	}
+
+	.lets_blog {
+		width: 250px;
+		height: 500px;
+		margin: auto;
+		margin-top: 50px;
+	}
+
+	.blog_img {
+		width: 250px;
+		height: 300px;
+		background-size: 250px 500px;
+	}
+
+	.h3_blog {
+		font-size: 20px;
+		margin-top: 6px;
+	}
+
+	.p_blog {
+		font-size: 20px;
+	}
+
+
+
+	.str_blocks {
+		height: 350px;
+	}
+
+	.str_block {
+		width: 500px;
+	}
+
+	.str_img {
+		width: 65px;
+		height: 50px;
+		background-size: 50px 50px;
+	}
+
+	.str_p {
+		font-size: 20px;
+	}
+
+	.str_img_two {
+		background-position: -10px -10px;
+		background-size: 70px 70px;
+	}
+
+
+	.iphone_block {
+		height: 700px;
+	}
+
+	.left_iphone_block_blocks {
+		margin-top: 30px;
+		height: 350px;
+	}
+
+	.left_iphone_block {
+		margin-left: 100px;
+	}
+
+
+	.our_team_main {
+		height: 700px;
+	}
+
+	.h2_team {
+		top: 30px;
+		font-size: 50px;
+	}
+
+	.h4_team {
+		top: 50px;
+		font-size: 30px;
+	}
+
+	.our_teams {
+		margin-top: 20px;
+		width: 1200px;
+	}
+
+	.our_team {
+		width: 250px;
+		background-position: -25px 0px;
+	}
+
+
+	.your_project {
+		height: 700px;
+	}
+
+	.h2_your_project {
+		top: 70px;
+	}
+
+	.your_project_form {
+		top: 100px;
+	}
+
+	.your_project_submit {
+		top: 400px;
+	}
+
+	.input_up {
+		width: 1200px;
+	}
+
+	.input_up_input {
+		width: 350px;
+	}
+
+	.input_down {
+		width: 1200px;
+		text-align: center;
+	}
+
+	.input_down_input {
+		width: 1150px;
+		display: table-cell;
+	}
 }
